welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:1: error: ')' expected but 'else' found.
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = { if (negative==true) { if ((a<0) && (b<0)) {return true} else {return false}} else if (((a>0) && (b<0)) || ((a<0) && (b>0)) {return true} else {return false}} 
                                                                                                                                                                                                ^